Update Apache Spark GraphX to identify Low engagement in Teams.ipynb

--- a/Apache Spark GraphX to identify Low engagement in Teams.ipynb
+++ b/Apache Spark GraphX to identify Low engagement in Teams.ipynb
@@ -11,11 +11,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is a script that attempts to analyse **Microsoft Teams** data and its users. Theis tool has been used to \n",
+    "This is a script that attempts to analyse **Microsoft Teams** data and its users. This tool has been used to \n",
     "\n",
     "- determine which students interacted with teachers and other students during Lockdown\n",
-    "- the number of connections made by students during lockdown\n",
-    "- which students attended all of their parent teacher nights on Microsoft Teams\n",
+    "- determine the number of connections made by students during lockdown\n",
+    "- identify which students attended all of their parent teacher nights on Microsoft Teams\n",
     "\n",
     "The final form of the data is pushed out for data visualisation; an anonymised image of which is produced below (reolution is kept low to hide names)\n"
    ]
