Update Apache Spark GraphX to identify Low engagement in Teams.ipynb

--- a/Apache Spark GraphX to identify Low engagement in Teams.ipynb
+++ b/Apache Spark GraphX to identify Low engagement in Teams.ipynb
@@ -571,7 +571,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The graph above (a Power BI screenshpt which used the above Teams data) was used to identify students of concern (who had not been attending or engaging with online classes)"
+    "The graph above (a Power BI screenshot which used the above Teams data) was used to identify students of concern (who had not been attending or engaging with online classes)"
    ]
   },
   {
